@@ -1,3 +1,8 @@
+Fri Nov 17 09:48:05 CET 2006 Christian Anthon <anthon@kiku.dk>
+
+	* gtkgame.c: Stop SIGSEGV when calling up Score Sheet Dialog
+	* gtkgame.c: Avoid screen jumble when full screen warning shown
+
 Mon Nov 13 18:50:22 CET 2006 Christian Anthon <anthon@kiku.dk>
 
 	* Makefile.am, configure.in, board3d/.cvsignore, board3d/Makefile.am,
